--- a/client/budget-app/package.json
+++ b/client/budget-app/package.json
@@ -13,6 +13,8 @@
     "concurrently": "^7.3.0",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
