--- a/client/budget-app/package.json
+++ b/client/budget-app/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3001/api/v1/users/",
   "homepage": "http://localhost:3000",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,8 +17,10 @@
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "redux": "^4.2.0",
     "request": "^2.88.2",
     "web-vitals": "^2.1.4"
   },
