--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,9 @@
   "name": "express-budget",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon index"
+  "main": "api.js",
+  "scripts": { 
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
+    "kill-port": "^2.0.1",
     "nodemon": "^2.0.19"
   }
 }
