--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,7 +6,8 @@ WORKDIR /app
 
 COPY ["package.json", "package-lock.json", "./"]
 
-RUN npm install --production
+RUN npm install
+RUN npm audit fix
 
 COPY . .
 
