--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,7 +6,9 @@ WORKDIR /app
 
 COPY ["package.json", "package-lock.json", "./"]
 
-RUN npm install --production
+RUN npm install
+RUN npm audit fix
+
 
 COPY . .
 
