--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "request": "^2.88.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
